--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 html, body {
-    width: 100%;
+    width: 300px;
     margin: 0, auto;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
+    align-items: center;
     align-self: center;
 }
 
 .container {
-    width: 300px;
+    width: 100%;
     align-self: center;
 }
 
 .explain {
     display: flex;
     align-self: center;
-    width: 300px;
     padding-bottom: 20px;
 }
 
 #inputField {
-    width: 240px;
+    width: 75%;
     height: 46px;
     border: 1px solid black;
     outline: none;
