--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body {
 }
 
 #inputField {
-    width: 240px;
+    width: 100%;
     height: 46px;
     border: 1px solid black;
     outline: none;
@@ -29,21 +29,32 @@ html, body {
 }
 
 #addToDont {
-    height: 50px;
-    width: 50px;
+    display: flex;
+    align-self: center;
+    text-align: center;
     border: 1px solid black;
+    border-radius: 10px;
     vertical-align: middle; 
-    font-size: 30px;
+    padding: 10px;
+    margin: 20px;
 }
 
 .toDonts {
-    margin-top: 25px;
+    display: flex;
+    background-image: url('image.png');
+    width: 300px;
+    min-height: 300px;
+    flex-direction: column;
+    align-self: center;
+    text-align: center;
+    justify-content: center;
+
 }
 
 .paragraph-styling {
     margin: 0;
     cursor: pointer;
-    font-size: 20px;
+    font-size: xx-large;
 }
 
 h1 {
@@ -59,5 +70,5 @@ h1 {
     border-radius: 10px;
     vertical-align: middle; 
     padding: 10px;
-    
+    margin: 20px;
 }
